<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.NewMovementActivity">

    <TextView
        android:id="@+id/txt_newMov"
        android:layout_width="162dp"
        android:layout_height="67dp"
        android:layout_marginStart="166dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="57dp"
        android:gravity="center"
        android:text="@string/new_movement"
        app:layout_constraintBottom_toTopOf="@+id/edt_qty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:layout_marginTop="244dp"
        android:gravity="center"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/by_default_will_be_today_s"
        android:minHeight="48dp"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/txt_date"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/txt_qty"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:layout_marginTop="128dp"
        android:gravity="center"
        android:text="@string/quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/qty"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/txt_qty"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_type"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:layout_marginTop="384dp"
        android:gravity="center"
        android:text="@string/type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="384dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/rent"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/txt_type"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btn_submitMov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="560dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>