<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddAccountActivity">

    <TextView
        android:id="@+id/txt_add"
        android:layout_width="172dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/add_account"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_iban"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/iban"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_add" />

    <EditText
        android:id="@+id/edt_iban"
        android:layout_width="236dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/IBAN_EX"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toEndOf="@+id/txt_iban"
        app:layout_constraintTop_toBottomOf="@+id/txt_add"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/txt_balance"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_marginTop="208dp"
        android:gravity="center"
        android:text="@string/balance"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_add" />

    <EditText
        android:id="@+id/edt_balance"
        android:layout_width="236dp"
        android:layout_height="48dp"
        android:layout_marginTop="208dp"
        android:ems="10"
        android:hint="@string/_0"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toEndOf="@+id/txt_iban"
        app:layout_constraintTop_toBottomOf="@+id/txt_add" />

    <Button
        android:id="@+id/btn_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:onClick="randomAcc"
        android:text="@string/generate_random_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="408dp"
        android:text="@string/create_new_account"
        android:onClick="newAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_add" />

</androidx.constraintlayout.widget.ConstraintLayout>