<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ViewMovementActivity">

    <Spinner
        android:id="@+id/spn_filter"
        android:layout_width="390dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_rFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/reset_filters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:text="@string/apply_filters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_mov"
        android:layout_width="414dp"
        android:layout_height="455dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_filter"
        app:layout_constraintVertical_bias="1.0">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/txt_mQty"
        android:layout_width="89dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/quantity"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_filter"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/edt_mQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="number"
        android:minHeight="48dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toEndOf="@+id/txt_mQty"
        app:layout_constraintTop_toBottomOf="@+id/spn_filter" />

    <RadioGroup
        android:id="@+id/rg_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/btn_filter"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_filter">

        <RadioButton
            android:id="@+id/rb_mIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/income" />

        <RadioButton
            android:id="@+id/rb_mWithdraw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/withdraw"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="209dp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_compare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_filter">

        <RadioButton
            android:id="@+id/rb_mHigher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/higher" />

        <RadioButton
            android:id="@+id/rb_mLower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lower"
            tools:layout_editor_absoluteX="119dp"
            tools:layout_editor_absoluteY="210dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/txt_vType"
        android:layout_width="89dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/type"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_filter"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/edt_mType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/food"
        android:inputType="text"
        android:minHeight="48dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toEndOf="@+id/txt_mQty"
        app:layout_constraintTop_toBottomOf="@+id/spn_filter" />

    <TextView
        android:id="@+id/txt_from"
        android:layout_width="89dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/from"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_filter"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/edt_from"
        android:layout_width="83dp"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:minHeight="48dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txt_mQty"
        app:layout_constraintTop_toBottomOf="@+id/spn_filter"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txt_to"
        android:layout_width="89dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/to"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_filter"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/edt_to"
        android:layout_width="83dp"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:minHeight="48dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toEndOf="@+id/txt_mQty"
        app:layout_constraintTop_toBottomOf="@+id/spn_filter"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/reset_dates"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/btn_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_filter" />

</androidx.constraintlayout.widget.ConstraintLayout>