<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@color/background"
    android:padding="16dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txt_mDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/date"
            android:textColor="@color/primary"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_mType"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/type"
                android:textColor="@color/secondary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_quantity"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/quantity"
                android:textColor="@color/secondary"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>